...
    <string name="debug_component_lab_action_more">更多</string>
    <string name="debug_component_lab_nav_home">主页</string>
    <string name="debug_component_lab_nav_discover">新发现</string>
    <string name="debug_component_lab_nav_radio">广播</string>
    <string name="debug_component_lab_nav_library">资料库</string>
    <string name="debug_component_lab_nav_search">搜索</string>
    <string name="debug_component_lab_search_placeholder">搜索收藏 BGM</string>
    <string name="debug_component_lab_nav_now">播放</string>
    <string name="debug_component_lab_nav_queue">队列</string>
    <string name="debug_component_lab_nav_lyrics">歌词</string>
    <string name="debug_component_lab_volume">音量</string>
    <string name="debug_component_lab_volume_value">%1$d%%</string>
    <string name="debug_component_lab_search_empty_title">没有匹配的 BGM</string>
...
